[bugfix] Enable editing or r/w/x from properties dialog [feature] Enable viewing of ACL ACE entries again

--- a/plugins/browsing/browsing.html
+++ b/plugins/browsing/browsing.html
@@ -65,7 +65,7 @@
                             <label for="resourceName">Resource:</label>
                         </span>
                         <span>
-                            <span id="resourceName"/>
+                            <input class="labelBox" id="resourceName" name="resourceName" value="" data-dojo-type="dijit.form.TextBox"/>
                         </span>
                     </div>
                     <div>
@@ -73,7 +73,7 @@
                             <label for="internetMediaType">Internet Media Type:</label>
                         </span>
                         <span>
-                            <input type="text" id="internetMediaType" name="internetMediaType" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true"/>
+                            <input class="labelBox" type="text" id="internetMediaType" name="internetMediaType" value="" data-dojo-type="dijit.form.TextBox" data-dojo-props="trim:true"/>
                         </span>
                     </div>
                     <div>
@@ -81,7 +81,7 @@
                             <label for="created">Created:</label>
                         </span>
                         <span>
-                            <span id="created"/>
+                            <input class="labelBox" type="text" id="created" name="created" value="" data-dojo-type="dijit.form.TextBox"/>
                         </span>
                     </div>
                     <div>
@@ -89,7 +89,7 @@
                             <label for="lastModified">Last Modified:</label>
                         </span>
                         <span>
-                            <span id="lastModified"/>
+                            <input class="labelBox" type="text" id="lastModified" name="lastModified" value="" data-dojo-type="dijit.form.TextBox"/>
                         </span>
                     </div>
                 </fieldset>
