--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             <div id="existIconBack">
                 <div class="configuration">
                     <form action="" data-dojo-type="dijit.form.Form">
-                        <label for="repo-url">Public Repository URL:</label>
-                        <input id="repo-url" type="text" name="repo-url" data-dojo-type="dijit.form.ValidationTextBox" data-dojo-props="regExp:'(http|ftp|https):\/\/.*', required:true, invalidMessage:'Invalid URI.'" style="width: 100%;" value="http://demo.exist-db.org/exist/apps/public-repo/public/apps.xml"/>
+                        <div class="dash:list-repo"/>
+                        <!-- <label for="repo-url">Public Repository URL:</label>
+                        <input id="repo-url" type="text" name="repo-url" data-dojo-type="dijit.form.ValidationTextBox" data-dojo-props="regExp:'(http|ftp|https):\/\/.*', required:true, invalidMessage:'Invalid URI.'" style="width: 100%;" value="http://demo.exist-db.org/exist/apps/public-repo/public/apps.xml"/> -->
                     </form>
                 </div>
             </div>
