--- a/dependencies.html
+++ b/dependencies.html
@@ -1,6 +1,17 @@
 <link rel="import" href="bower_components/polymer/polymer-element.html"/>
 <link rel="import" href="bower_components/paper-styles/color.html"/>
 <link rel="import" href="bower_components/paper-styles/typography.html"/>
+<link rel="import" href="bower_components/app-layout/app-drawer-layout/app-drawer-layout.html"/>
+<link rel="import" href="bower_components/app-layout/app-drawer/app-drawer.html"/>
+<link rel="import" href="bower_components/app-layout/app-toolbar/app-toolbar.html"/>
+<link rel="import" href="bower_components/app-layout/app-header-layout/app-header-layout.html"/>
+<link rel="import" href="bower_components/app-layout/app-header/app-header.html"/>
+<link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html"/>
+<link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/social-icons.html"/>
+<link rel="import" href="bower_components/iron-icon/iron-icon.html"/>
+<link rel="import" href="bower_components/paper-item/paper-item.html"/>
+
 <link rel="import" href="existdb-dashboard.html"/>
 
 <!-- ### still need to 'merge' dependencies from used apps in this case existdb-packageservice - there must be a better way. ### -->
