styling; allowing tabbing through icons; added some more icons

--- a/dependencies.html
+++ b/dependencies.html
@@ -19,5 +19,6 @@
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html"/>
 <link rel="import" href="../existdb-packageservice/existdb-local-packages.html"/>
 <link rel="import" href="../existdb-packageservice/existdb-app-details.html"/>
+<link rel="import" href="../existdb-packageservice/existdb-package-descriptor.html"/>
 
 
