2 separate views for guest and admin users introduced;

--- a/dependencies.html
+++ b/dependencies.html
@@ -1,3 +1,4 @@
+
 <link rel="import" href="bower_components/polymer/polymer-element.html"/>
 <link rel="import" href="bower_components/paper-styles/color.html"/>
 <link rel="import" href="bower_components/paper-styles/typography.html"/>
@@ -13,6 +14,8 @@
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 
 <link rel="import" href="existdb-dashboard.html"/>
+<link rel="import" href="existdb-launcher.html"/>
+<link rel="import" href="existdb-dashboard-app.html"/>
 
 <!-- ### still need to 'merge' dependencies from used apps in this case existdb-packageservice - there must be a better way. ### -->
 <!-- ### Just importing the dependencies from used app leads to error with duplicate loading of polymer-element class. ### -->
