--- a/existdb-dashboard.html
+++ b/existdb-dashboard.html
@@ -57,7 +57,6 @@ a eXistdb launchpad
     <app-drawer-layout fullbleed force-narrow="true">
       <app-drawer slot="drawer">
         <div class="drawerbar">
-          <!--<div main-title>user1</div>-->
           <img class="logo" src="resources/images/existdb.png">
         </div>
 
@@ -92,7 +91,7 @@ a eXistdb launchpad
           <app-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
             <div main-title>Dashboard</div>
-              <div class="righttool">admin | <a href="index.html?logout=true">logout</a></div>
+              <div class="righttool"><a href="login">login</a></div>
           </app-toolbar>
         </app-header>
 
