wip: routing basically working

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,9 @@
       <h3>Basic existdb-dashboard demo</h3>
       <demo-snippet>
         <template>
-          <existdb-dashboard></existdb-dashboard>
+          <existdb-dashboard>
+            <existdb-local-packages></existdb-local-packages>
+          </existdb-dashboard>
         </template>
       </demo-snippet>
     </div>
