--- a/dependencies.html
+++ b/dependencies.html
@@ -13,15 +13,24 @@
 <link rel="import" href="bower_components/iron-icon/iron-icon.html"/>
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 
+<!-- ### routing ### -->
+<link rel="import" href="bower_components/app-route/app-location.html">
+<link rel="import" href="bower_components/app-route/app-route.html">
+
+
 <link rel="import" href="existdb-dashboard.html"/>
-<link rel="import" href="existdb-launcher.html"/>
-<link rel="import" href="existdb-dashboard-app.html"/>
+<link rel="import" href="bower_components/existdb-usermanager/dependencies.html"/>
+
+<!--<link rel="import" href="existdb-launcher.html"/>-->
+<!--<link rel="import" href="existdb-dashboard-app.html"/>-->
+<!--<link rel="import" href="bower_components/existdb-packagemanager/existdb-packagemanager.html"/>-->
+
+
+
 
 <!-- ### still need to 'merge' dependencies from used apps in this case existdb-packageservice - there must be a better way. ### -->
 <!-- ### Just importing the dependencies from used app leads to error with duplicate loading of polymer-element class. ### -->
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html"/>
-<link rel="import" href="../existdb-packageservice/existdb-local-packages.html"/>
-<link rel="import" href="../existdb-packageservice/existdb-app-details.html"/>
-<link rel="import" href="../existdb-packageservice/existdb-package-descriptor.html"/>
+<!--<link rel="import" href="../existdb-packageservice/existdb-app-details.html"/>-->
 
 
