--- a/existdb-launcher.html
+++ b/existdb-launcher.html
@@ -54,6 +54,7 @@ a eXistdb launchpad
           </app-toolbar>
         </app-header>
 
+        <h1>Launcher</h1>
         <slot></slot>
 
       </app-header-layout>
