--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes"/>
-
     <title>existdb-dashboard</title>
+    <link rel="stylesheet" href="resources/styles.css"/>
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="dependencies.html"/>
 </head>
 <body>
+    <existdb-dashboard class="grid"> </existdb-dashboard>
 </body>
 </html>
