--- a/admin.html
+++ b/admin.html
@@ -12,8 +12,21 @@
 
 </head>
 <body>
-    <existdb-dashboard class="grid">
-        <existdb-local-packages></existdb-local-packages>
+
+    <existdb-dashboard>
+        <!--<existdb-usermanager slot="usermanager"> </existdb-usermanager>-->
+        <!--<existdb-packagemanager> </existdb-packagemanager>-->
+        <!--<existdb-launcher></existdb-launcher>-->
+
+        <!--<existdb-local-packages></existdb-local-packages>-->
+<!--
+        <existdb-dashboard></existdb-dashboard>
+        <existdb-packagemanager></existdb-packagemanager>
+        <existdb-usermanager></existdb-usermanager>
+        <existdb-backup></existdb-backup>
+        <existdb-adminclient></existdb-adminclient>
+        <existdb-scheduler></existdb-scheduler>
+-->
     </existdb-dashboard>
 </body>
 </html>
