--- a/existdb-dashboard.html
+++ b/existdb-dashboard.html
@@ -6,136 +6,248 @@ a eXistdb launchpad
 -->
 
 <dom-module id="existdb-dashboard">
-  <template>
-    <style>
-      :host {
-        display: block;
-        width:100%;
-        height:100%;
-        margin:0;
-        padding:0;
-        @apply(--paper-font-common-base);
-        color:white;
-        --app-drawer-scrim-background:rgba(0,0,0,0.3);
-      }
+    <template>
+        <style>
+            :host {
+                display: block;
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                @apply(--paper-font-common-base);
+                color: white;
+                --app-drawer-scrim-background: rgba(0, 0, 0, 0.3);
+            }
 
-      app-toolbar{
-        background: rgb(0, 136, 204);
-        width:100%;
-        margin:0;
-      }
-      app-drawer{
-        /*background: rgba(245, 245, 245, 0.5);*/
-        z-index:100;
-        text-align: center;
-        color: black;
-      }
+            app-toolbar {
+                background: rgb(0, 136, 204);
+                width: 100%;
+                margin: 0;
+            }
 
-      .drawerbar{
-        width:256px;
-        height:128px;
-        display: table-cell;
-        vertical-align: middle;
-      }
-      .righttool{
-        margin-right:50px;
-      }
+            app-drawer {
+                /*background: rgba(245, 245, 245, 0.5);*/
+                z-index: 100;
+                text-align: center;
+                color: black;
+            }
 
-      app-drawer iron-icon{
-        color: rgb(0, 136, 204);
-        margin-right:20px;
+            .drawerbar {
+                width: 256px;
+                height: 128px;
+                display: table-cell;
+                vertical-align: middle;
+            }
 
-      }
-      .logo{
-        width:134px;
-      }
-      a{
-          color:var(--paper-blue-900);
-      }
-    </style>
+            .righttool {
+                margin-right: 50px;
+            }
 
-    <app-drawer-layout fullbleed force-narrow="true">
-      <app-drawer slot="drawer">
-        <div class="drawerbar">
-          <img class="logo" src="resources/images/existdb.png">
-        </div>
+            app-drawer iron-icon {
+                color: rgb(0, 136, 204);
+                margin-right: 20px;
 
-        <!--
-        drawer items will be loaded dynamically dependent on the group a user has
-        -->
-        <div id="draweritems">
-          <paper-item>
-            <iron-icon icon="apps"></iron-icon>
-            PackageManager
-          </paper-item>
-          <paper-item>
-            <iron-icon icon="social:people"></iron-icon>
-            UserManager
-          </paper-item>
-          <paper-item>
-            <iron-icon icon="settings-backup-restore"></iron-icon>
-            Backup
-          </paper-item>
-          <paper-item>
-            <iron-icon icon="settings"></iron-icon>
-            Java Admin Client
-          </paper-item>
-          <paper-item>
-            <iron-icon icon="update"></iron-icon>
-            Scheduler
-          </paper-item>
-        </div>
-      </app-drawer>
-      <app-header-layout>
-        <app-header slot="header">
-          <app-toolbar>
-            <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>Dashboard</div>
-              <div class="righttool"><a href="login">login</a></div>
-          </app-toolbar>
-        </app-header>
+            }
 
-        <slot></slot>
+            .logo {
+                width: 134px;
+            }
 
-      </app-header-layout>
-    </app-drawer-layout>
+            a {
+                color: var(--paper-blue-900);
+            }
+
+
+
+            h1{
+                color:blue;
+            }
+        </style>
+
+        <app-location id="location" route="{{route}}" use-hash-as-path></app-location>
+        <app-route id="router"
+                route="{{route}}"
+                pattern="/:page"
+                data="{{routeData}}"></app-route>
+
 
 <!--
-    <app-toolbar>
-      <paper-icon-button icon="menu" on-click="_toggleDrawer"></paper-icon-button>
-      <div main-title>Dashboard</div>
-    </app-toolbar>
-
-    <app-drawer-layout>
-      <app-drawer id="drawer" slot="drawer" swipe-open>
-        <div>
-          here's something
-        </div>
-      </app-drawer>
-      <slot></slot>
-    </app-drawer-layout>
+        <iron-ajax id="loadDashboard"
+                   with-credentials
+                   method="get"
+                   handle-as="json"
+                   on-response="_handleLoad"
+                   url="/exist/apps/existdb-dashboard/modules/dashboard.xql"
+                   on-error="_handleLoadError"
+                   auto
+        ></iron-ajax>
 -->
 
-  </template>
+        <app-drawer-layout fullbleed>
+            <app-drawer slot="drawer">
+                <div class="drawerbar">
+                    <img class="logo" src="resources/images/existdb.png">
+                </div>
 
-  <script>
-    class ExistdbDashboard extends Polymer.Element {
-      static get is() { return 'existdb-dashboard'; }
+                <!--
+                drawer items will be loaded dynamically dependent on the group a user has
+                -->
+                <!--<div id="listItems" class="drawer-items" role="listbox" slot="menu">-->
+                <!--<paper-listbox id="menu" attr-for-selected="id">-->
+                    <paper-item id="launcherItem" on-click="_showLauncher" role="menuitem">Launcher</paper-item>
+                    <paper-item id="packageManagerItem" on-click="_showPackageManager" role="menuitem">Package Manager</paper-item>
+                    <paper-item id="userManagerItem" on-click="_showUserManager" role="menuitem">User Manager</paper-item>
+                    <!--<paper-item on-click="_showBackup">Backup</paper-item>-->
+                    <paper-item id="settingsItem" on-click="_showSettings" role="menuitem">Settings</paper-item>
+                <!--</paper-listbox>-->
 
-      static get properties() {
-        return {
-          prop1: {
-            type: String,
-            value: 'existdb-dashboard'
-          }
-        };
-      }
+                <!--</div>-->
+            </app-drawer>
+            <app-header-layout>
+                <app-header slot="header">
+                    <app-toolbar>
+                        <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
+                        <div main-title>Dashboard</div>
+                        <div class="righttool"><a href="login">login</a></div>
+                    </app-toolbar>
+                </app-header>
 
-      _toggleDrawer(){
-          this.$.drawer.toggle();
-      }
-    }
+<!--
+                <template id="pageList" is="dom-repeat" items="{{pages}}" as="item">
 
-    window.customElements.define(ExistdbDashboard.is, ExistdbDashboard);
-  </script>
+                </template>
+-->
+                <!--<slot></slot>-->
+
+                <iron-pages id="pages" selected="{{routeData.page}}" attr-for-selected="name">
+                    <div name="launcher">
+                        <h1>launcher</h1>
+                    </div>
+                    <div name="packagemanager">
+                        <h1>package manager</h1>
+                    </div>
+                    <div name="usermanager" on-click="_loadUserManager">
+                        <!--<existdb-usermanager></existdb-usermanager>-->
+                        <h1>user manager</h1>
+                        <!--<slot name="usermanager"></slot>-->
+                    </div>
+<!--
+                    <div name="backup">
+                        <h1>backup</h1>
+                    </div>
+-->
+                    <div name="settings">
+                        <h1>settings</h1>
+                    </div>
+                </iron-pages>
+
+            </app-header-layout>
+        </app-drawer-layout>
+
+        <!--
+            <app-toolbar>
+              <paper-icon-button icon="menu" on-click="_toggleDrawer"></paper-icon-button>
+              <div main-title>Dashboard</div>
+            </app-toolbar>
+
+            <app-drawer-layout>
+              <app-drawer id="drawer" slot="drawer" swipe-open>
+                <div>
+                  here's something
+                </div>
+              </app-drawer>
+              <slot></slot>
+            </app-drawer-layout>
+        -->
+
+    </template>
+
+    <script>
+        class ExistdbDashboard extends Polymer.Element {
+            static get is() {
+                return 'existdb-dashboard';
+            }
+
+            static get properties() {
+                return {
+                    route:{
+                        type:Object
+                    }
+                };
+            }
+
+            connectedCallback() {
+                super.connectedCallback();
+                console.log("dashboard connected");
+
+
+            }
+
+            ready(){
+                super.ready();
+//                this.$.location.addEventListener('path-changed', event => this.routeChanged(event))
+                if (!this.route || !this.route.path) {
+                    this.route = {};
+                    this.set('route.path', '/launcher');
+/*
+                    this.route.path = '/launcher';
+                    this.notifyPath('route.path');
+*/
+                }
+
+            }
+
+            routeChanged(event){
+                console.log("route changed ",event);
+                console.log("route changed ",this.route);
+                var s = event.detail.value.substring(1);
+                console.log("route changed ",s);
+/*
+                if(s == 'launcher'){
+                    console.log('launcher')
+                    this.$.menu.select('launcherItem');
+                } else if(s == 'packagemanager'){
+                    this.$.menu.select('packagemanager');
+                } else if(s == 'usermanager'){
+                    this.$.menu.select('usermanager');
+                } else if(s == 'settings'){
+                    this.$.menu.select('settings');
+                }
+*/
+
+            }
+
+            _toggleDrawer() {
+                this.$.drawer.toggle();
+            }
+
+            _handleLoad(){
+                console.log("items: ", this.$.loadDashboard.lastResponse);
+                this.menuItems = this.$.loadDashboard.lastResponse;
+            }
+
+            _loadUserManager(e){
+                console.log('loadUserManager');
+//                Polymer.importHref('bower_components')
+            }
+
+            _showLauncher(e){
+                console.log('show.... ', e);
+                this.$.pages.select('launcher');
+            }
+            _showPackageManager(e){
+                console.log('show.... ', e);
+                this.$.pages.select('packagemanager');
+            }
+            _showUserManager(e){
+                this.$.pages.select('usermanager');
+            }
+            _showSettings(e){
+                this.$.pages.select('settings');
+            }
+
+        }
+
+        window.customElements.define(ExistdbDashboard.is, ExistdbDashboard);
+    </script>
 </dom-module>
