--- a/existdb-dashboard.html
+++ b/existdb-dashboard.html
@@ -51,6 +51,9 @@ a eXistdb launchpad
                 display: table-cell;
                 vertical-align: middle;
             }
+            app-drawer-layout:not([narrow]) [drawer-toggle] {
+                display: none;
+            }
 
             .righttool {
                 margin-right: 50px;
@@ -70,7 +73,11 @@ a eXistdb launchpad
                 color: var(--paper-blue-900);
             }
 
-
+            .subitem{
+                font-weight:700;
+                font-size:larger;
+                letter-spacing:1.5px;
+            }
 
 
             h1{
@@ -97,8 +104,8 @@ a eXistdb launchpad
         ></iron-ajax>
 -->
 
-        <app-drawer-layout fullbleed>
-            <app-drawer slot="drawer">
+        <app-drawer-layout id="drawerLayout" fullbleed>
+            <app-drawer id="drawer" slot="drawer">
                 <div class="drawerbar">
                     <img class="logo" src="resources/images/existdb.png">
                 </div>
@@ -132,9 +139,9 @@ a eXistdb launchpad
             <app-header-layout>
                 <app-header slot="header">
                     <app-toolbar>
-                        <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-                        <div main-title>Dashboard</div>
-                        <div class="righttool"><a href="login">login</a></div>
+                        <paper-icon-button icon="menu" drawer-toggle on-click="_toggleDrawer"></paper-icon-button>
+                        <div main-title>Dashboard > <span class="subitem">[[mainLabel]]</span></div>
+                        <div class="righttool"><a href="index.html?logout=true">logout</a></div>
                     </app-toolbar>
                 </app-header>
 
@@ -154,8 +161,7 @@ a eXistdb launchpad
                     </div>
                     <div name="usermanager" on-click="_loadUserManager">
                         <!--<existdb-usermanager></existdb-usermanager>-->
-                        <h1>user manager</h1>
-                        <!--<slot name="usermanager"></slot>-->
+                        <slot name="usermanager"></slot>
                     </div>
 <!--
                     <div name="backup">
@@ -198,6 +204,10 @@ a eXistdb launchpad
                 return {
                     route:{
                         type:Object
+                    },
+
+                    mainLabel:{
+                        type: String
                     }
                 };
             }
@@ -205,13 +215,11 @@ a eXistdb launchpad
             connectedCallback() {
                 super.connectedCallback();
                 console.log("dashboard connected");
-
-
             }
 
             ready(){
                 super.ready();
-//                this.$.location.addEventListener('path-changed', event => this.routeChanged(event))
+                this.$.location.addEventListener('path-changed', event => this.routeChanged(event))
                 if (!this.route || !this.route.path) {
                     this.route = {};
                     this.set('route.path', '/launcher');
@@ -228,18 +236,16 @@ a eXistdb launchpad
                 console.log("route changed ",this.route);
                 var s = event.detail.value.substring(1);
                 console.log("route changed ",s);
-/*
                 if(s == 'launcher'){
-                    console.log('launcher')
-                    this.$.menu.select('launcherItem');
+                    console.log('launcher');
+                    this.mainLabel = 'Launcher';
                 } else if(s == 'packagemanager'){
-                    this.$.menu.select('packagemanager');
+                    this.mainLabel = 'Package Manager';
                 } else if(s == 'usermanager'){
-                    this.$.menu.select('usermanager');
+                    this.mainLabel = 'User Manager';
                 } else if(s == 'settings'){
-                    this.$.menu.select('settings');
+                    this.mainLabel = 'Settings';
                 }
-*/
 
             }
 
@@ -259,18 +265,34 @@ a eXistdb launchpad
 
             _showLauncher(e){
                 console.log('show.... ', e);
-//                this.$.pages.select('launcher');
-                this.route.path = "/launcher";
+                this.$.pages.select('launcher');
+                if(this.$.drawerLayout.narrow){
+                    this.$.drawer.close();
+                }
             }
             _showPackageManager(e){
                 console.log('show.... ', e);
                 this.$.pages.select('packagemanager');
+                if(this.$.drawerLayout.narrow){
+                    this.$.drawer.close();
+                }
             }
             _showUserManager(e){
                 this.$.pages.select('usermanager');
+                if(this.$.drawerLayout.narrow){
+                    this.$.drawer.close();
+                }
             }
             _showSettings(e){
                 this.$.pages.select('settings');
+                if(this.$.drawerLayout.narrow){
+                    this.$.drawer.close();
+                }
+            }
+
+            _toggleDrawer(e){
+                this.$.drawer.close();
+//                this.$.drawer.notifyResize();
             }
 
         }
