--- a/dependencies.html
+++ b/dependencies.html
@@ -11,6 +11,7 @@
 <link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
 <link rel="import" href="bower_components/iron-icons/social-icons.html"/>
 <link rel="import" href="bower_components/iron-icon/iron-icon.html"/>
+<link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 <link rel="import" href="bower_components/paper-material/paper-material.html"/>
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html"/>
@@ -23,6 +24,7 @@
 <link rel="import" href="existdb-dashboard.html"/>
 <link rel="import" href="existdb-settings.html"/>
 <link rel="import" href="bower_components/existdb-usermanager/dependencies.html"/>
+<link rel="import" href="bower_components/existdb-packagemanager/dependencies.html"/>
 
 <!--<link rel="import" href="existdb-launcher.html"/>-->
 <!--<link rel="import" href="existdb-dashboard-app.html"/>-->
